@@ -1,0 +1,68 @@
+/**
+ * @author Nikos Aggelis nikosaggelis@hotmail.gr
+ */
+(function ($) {
+	'use strict';
+
+	$.sceditor.locale["el"] = {
+		"Bold": "Έντονα",
+		"Italic": "Πλάγια",
+		"Underline": "Υπογραμμισμένα",
+		"Strikethrough": "Διαγραμμισμένα",
+		"Subscript": "Δείκτης",
+		"Superscript": "Εκθέτης",
+		"Align left": "Αριστερή στοίχιση",
+		"Center": "Κεντραρισμένα",
+		"Align right": "Δεξιά στοίχιση",
+		"Justify": "Πλήρης στοίχιση",
+		"Font Name": "Γραμματοσειρά",
+		"Font Size": "Μέγεθος",
+		"Font Color": "Χρώμα",
+		"Remove Formatting": "Αφαίρεση μορφοποίησης",
+		"Cut": "Αποκοπή",
+		"Your browser does not allow the cut command. Please use the keyboard shortcut Ctrl/Cmd-X": "Ο περιηγητής σας δεν επιτρέπει την εντολή αποκοπής. Παρακαλούμε χρησιμοποιήστε τη συντόμευση πληκτρολογίου Ctrl/Cmd-X",
+		"Copy": "Αντιγραφή",
+		"Your browser does not allow the copy command. Please use the keyboard shortcut Ctrl/Cmd-C": "Ο περιηγητής σας δεν επιτρέπει την εντολή αντιγραφής. Παρακαλούμε χρησιμοποιήστε τη συντόμευση πληκτρολογίου Ctrl/Cmd-C",
+		"Paste": "Επικόλληση",
+		"Your browser does not allow the paste command. Please use the keyboard shortcut Ctrl/Cmd-V": "Ο περιηγητής σας δεν επιτρέπει την εντολή επικόλλησης. Παρακαλούμε χρησιμοποιήστε τη συντόμευση πληκτρολογίου Ctrl/Cmd-V",
+		"Paste your text inside the following box:": "Επικολλήστε το κείμενό σας μέσα στο ακόλουθο πλαίσιο:",
+		"Paste Text": "Επικόλληση κειμένου",
+		"Bullet list": "Λίστα με κουκίδες",
+		"Numbered list": "Λίστα με αρίθμηση",
+		"Undo": "Αναίρεση",
+		"Redo": "Επανάληψη",
+		"Rows:": "Γραμμές",
+		"Cols:": "Στήλες",
+		"Insert a table": "Εισαγωγή πίνακα",
+		"Insert a horizontal rule": "Εισαγωγή οριζόντιας γραμμής",
+		"Code": "Κώδικας",
+		"Width (optional):": "Πλάτος (Προαιρετικό)",
+		"Height (optional):": "Ύψος (Προαιρετικό)",
+		"Insert an image": "Εισαγωγή εικόνας",
+		"E-mail:": "Ηλεκτρονικό ταχυδρομείο",
+		"Insert an email": "Εισαγωγή email",
+		"URL:": "Ηλεκτρονική διεύθυνση",
+		"Insert a link": "Εισαγωγή συνδέσμου",
+		"Unlink": "Κατάργηση σύνδεσης",
+		"More": "Περισσότερα",
+		"Insert an emoticon": "Εισαγωγή φατσούλας",
+		"Video URL:": "Διεύθυνση βίντεο",
+		"Insert": "Εισαγωγή",
+		"Insert a YouTube video": "Εισαγωγή βίντεο YouTube",
+		"Insert current date": "Εισαγωγή τρέχουσας ημερομηνίας",
+		"Insert current time": "Εισαγωγή τρέχουσας ώρας",
+		"Print": "Εκτύπωση",
+		"Maximize": "Μεγιστοποίηση",
+		"View source": "Προβολή πηγαίου κώδικα",
+		"Description (optional):": "Περιγραφή (προαιρετικό)",
+		"Enter the image URL:": "Εισάγετε τη διεύθυνση εικόνας",
+		"Enter the e-mail address:": "Εισάγετε τη διεύθυνση e-mail",
+		"Enter the displayed text:": "Εισάγετε το εμφανιζόμενο κείμενο",
+		"Enter URL:": "Εισάγετε διεύθυνση",
+		"Enter the YouTube video URL or ID:": "Εισάγετε τη διεύθυνση του βίντεο YouTube ή το ID",
+		"Insert a Quote": "Εισαγωγή παράθεσης",
+		"Invalid YouTube video": "Μη έγκυρο βίντεο YouTube",
+
+		dateFormat: "day-month-year"
+	};
+})(jQuery);
